--- a/src/components/order/order-list.less
+++ b/src/components/order/order-list.less
@@ -15,3 +15,13 @@
   text-align: center;
   margin-top:20px;
 }
+
+.ivu-col-span-3{
+  text-align: right;
+  padding-right: 10px;
+}
+.ivu-row{
+  border-bottom: 1px solid #f0f0f0;
+  height: 40px;
+  line-height: 32px;
+}
